@@ -1,5 +1,11 @@
 2002-01-15  John Levon  <moz@compsoc.man.ac.uk>
 
+	* module/compat.h:
+	* module/compat.c:
+	* module/op_rtc.c: 2.2 modversions fix
+ 
+2002-01-15  John Levon  <moz@compsoc.man.ac.uk>
+
 	* TODO: update
 
 	* module/compat.h:
